...
                            Button {
                                roteador.aba = .turnos
                            } label: {
                                Label(TextosDoProfissional.Turnos.tituloMeusTurnos, systemImage: "calendar")
                            }
                            .accessibilityShowsLargeContentViewer()
                            .accessibilityIdentifier("abrir-meus-turnos")
                        }
                        ToolbarItem(placement: .topBarTrailing) {
                            barra()
                                .accessibilityShowsLargeContentViewer()
                        }
                        ToolbarItem(placement: .topBarTrailing) {
...
